src/snapshots/aidl_parser__ast__tests__annotation-5.snap
---
source: src/ast.rs
expression: "rules::annotation(input, &lookup(input))?"

---
Annotation(
  key_values: {
    "Hello": Some("\"World\""),
    "Hi": None,
    "Servus": Some("3"),
  },
)
