src/snapshots/aidl_parser__ast__tests__annotation1.snap
---
source: src/ast.rs
expression: "rules::annotation(input, &lookup(input))?"

---
Annotation(
  key_values: {},
)
