src/snapshots/aidl_parser__ast__tests__annotation3.snap
---
source: src/ast.rs
expression: "rules::annotation(input, &lookup(input))?"

---
Annotation(
  key_values: {
    "Hello": None,
  },
)
