src/snapshots/aidl_parser__ast__tests__const_with_javadoc.snap
---
source: src/ast.rs
expression: "rules::const_(input, &lookup(input))?"

---
Const(
  name: "CONST_NAME",
  const_type: Type(
    name: "TypeName",
    kind: Custom,
    generic_types: [],
    definition: None,
    symbol_range: "...",
  ),
  value: "123",
  annotations: [],
  doc: Some("Const docu"),
  symbol_range: "...",
  full_range: "...",
)
