src/snapshots/aidl_parser__ast__tests__enum_with_errors.snap
---
source: src/ast.rs
expression: "rules::enum_(input, &lookup(input), &mut diagnostics)?"

---
Enum(
  name: "Paprika",
  elements: [
    EnumElement(
      name: "ELEMENT1",
      value: Some("3"),
      doc: None,
      symbol_range: "...",
      full_range: "...",
    ),
    EnumElement(
      name: "ELEMENT3",
      value: None,
      doc: None,
      symbol_range: "...",
      full_range: "...",
    ),
  ],
  annotations: [],
  doc: None,
  full_range: "...",
  symbol_range: "...",
)
